# converge-ui

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: 00_PLAN.md  01_CODA_VISION_SPEC.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css
frontend/src/components/: ConnectivityBanner.tsx  DataTable.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  LifecycleRail.tsx  StaleDataBanner.tsx
frontend/src/lib/: ui.test.ts  ui.ts
monitoring/: alert-rules.yml  alerts.yml  grafana-dashboard.json  prometheus.yml
scripts/: stack_smoke_test.sh
src/converge_ui/: app.py  logging.py  main.py
src/converge_ui/api/: auth.py  routes.py
src/converge_ui/bff/: __init__.py  demo_data.py  service.py
src/converge_ui/clients/: base.py  converge_client.py  orchestrator_client.py
src/converge_ui/config/: settings.py
src/converge_ui/web/: app.js  index.html  styles.css
tests/: test_api.py  test_auth.py  test_validation.py
tests/contract/: test_converge_contract.py  test_orchestrator_contract.py
