[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "converge-ui"
version = "0.1.0"
description = "Control plane UI backend for converge + converge-orchestrator"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0"
]

[project.scripts]
converge-ui = "converge_ui.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
converge_ui = ["web/index.html", "web/app.js", "web/styles.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
